	* src/view/telnetview.cpp: Check crlf in pasting lines with color.
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=21 by hrs113355
	* debian/compat,
	debian/control,
	debian/copyright,
	debian/docs,
	debian/libpcmanx-core0.install,
	debian/mozilla-plugin-pcmanx.install,
	debian/mozilla-plugin-pcmanx.links,
	debian/pcmanx-gtk2.install,
	debian/rules: Add a rough debian folder.

2010-06-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh: Polish script.
	* build/snapshot-deb.sh: Fix some dependency problem.

2010-06-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh: Update Debian packaging script.

2010-05-12  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp (CMainFrame::CMainFrame): Set the focus chain 
	for quick switching keyboard focus to the URL entry by Tab key.

2010-04-15  Jason Xia  <jasonxh@gmail.com>

	* src/downarticledlg.h, src/downarticledlg.cpp: Fix article download
	issue with bdwm.net. Also change the 'Cancel' button into a 'Stop'
	button so that if download gets stuck again, one can click 'Stop' to
	abort waiting while still being able save what has been downloaded.
	Previous 'Cancel' behavior can be achieved by pressing Esc or closing
	the download window.
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=11

2010-03-13  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/make-new-release.sh: Adjust the script for release test.
	* plugin/src/np_entry.cpp,
	plugin/src/npn_gate.cpp,
	plugin/src/npplat.h,
	plugin/src/npupp.h: Fix the compilation error of '--enable-plugin'.
	* build/snapshot-deb.sh: Add '--enable-plugin' to build Debian package.
	* plugin/src/Makefile.am: Fix the missing header file of automake.
	* AUTHORS,
	configure.ac: xpidl not found on OpenSolaris
	Reported by Halton Huo <halton.huo@sun.com>
	http://code.google.com/p/pcmanx-gtk2/issues/detail?id=2
	* src/core/pcmanx_utils.h,
	src/notebook.cpp: <bits/wordsize.h> not found on OpenSolaris